--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <section class="section-intro">
     <header>
-      <h1>The Chhotu Palce</h1>
+      <h1>The Anuj Palce</h1>
     </header>
     <div class="link-to-book-wrapper">
       <a class="link-to-book" href="#reservations">Book a table</a>
